force-app/main/default/objects/openq__OPENQ_Presentation__c/openq__OPENQ_Presentation__c.object-meta.xml
<CustomObject>
    <label>Presentation</label>
    <nameField>
        <displayFormat>PR-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Presentations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>