force-app/main/default/objects/openq__OPENQ_Presentation__c/fields/openq__Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>openq__Contact_Name__c</fullName>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>OPENQ_Presentations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>