force-app/main/default/objects/openq__OPENQ_Presentation__c/fields/openq__Date__c.field-meta.xml
<CustomField>
    <fullName>openq__Date__c</fullName>
    <label>Year</label>
    <length>10</length>
    <type>Text</type>
</CustomField>