force-app/main/default/objects/openq__OPENQ_Presentation__c/fields/openq__Meeting_URL__c.field-meta.xml
<CustomField>
    <fullName>openq__Meeting_URL__c</fullName>
    <label>Meeting URL</label>
    <type>Url</type>
</CustomField>