force-app/main/default/objects/openq__OPENQ_Presentation__c/fields/openq__Position__c.field-meta.xml
<CustomField>
    <fullName>openq__Position__c</fullName>
    <label>Position</label>
    <length>80</length>
    <type>Text</type>
</CustomField>