force-app/main/default/objects/openq__OPENQ_Presentation__c/fields/openq__Presentation_Title__c.field-meta.xml
<CustomField>
    <fullName>openq__Presentation_Title__c</fullName>
    <label>Presentation Title</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>