force-app/main/default/objects/openq__OPENQ_Presentation__c/fields/openq__Presentation_Type__c.field-meta.xml
<CustomField>
    <fullName>openq__Presentation_Type__c</fullName>
    <label>Presentation Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>